--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   </head>
   <body>
     <header class="header">
+
+      <h1>iniciando</h1>
       <div class="container-title">
         <span class="title"><strong>trybe</strong>shopping</span>
       </div>
