--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <section class="container">
       <section class="items"></section>
       <section class="cart">
+        <div class="cart-total">R$ <span class="total-price">0</span></div>
         <ol class="cart__items"></ol>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
