--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./helpers/saveCartItems.js" defer></script>
     <script src="./helpers/getSavedCartItems.js" defer></script>
     <script src="script.js" defer></script>
+    <h1>DANDO UM START NO PROJETO</h1>
   </head>
   <body>
     <header class="header">
