--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/libs/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700&display=swap" rel="stylesheet">
@@ -26,7 +27,7 @@
         <span class="cart__title">Meu carrinho</span>
       </div>
     </header>
-    <section class="container">
+    <section class="container bg-slate-800">
       <section class="items"></section>
       <section class="cart">
         <div class="cart-total">R$ <span class="total-price">0</span></div>
