--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <div> Total: R$<span class="total-price"></span></div>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
