--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <section class="container">
       <section class="items"></section>
       <section class="cart">
-        <ol class="cart__items"></ol>
-        <p class="total-price">TOTAL</p>
+        <ol class="cart__items"></ol>        
         <button class="empty-cart">Esvaziar carrinho</button>
+        <p class="total-price"></p>
+
       </section>
     </section>
   </body>
