--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <label for="total-price">Subtotal:
         <span class="total-price"></span>
+        </label>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
