--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <p class="total-price-container">TOTAL: $<span class="total-price">0.00</span></p>
         <button class="empty-cart">Esvaziar carrinho</button>
-        <p class="total-price-container">$<span class="total-price">0.00</span></p>
       </section>
     </section>
   </body>
