--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
-        <button class="empty-cart">Esvaziar carrinho</button>
+        <div class="cart_fixed_elements">
+          <span>Valor total: <strong>$</strong></span>
+          <span class="total-price"></span>
+          <br>
+          <button class="empty-cart">Esvaziar carrinho</button>
+        </div>
       </section>
     </section>
   </body>
