--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="cart_fixed_elements">
           <span>Valor total: <strong>$</strong></span>
           <span class="total-price"></span>
-          <br>
-          <button class="empty-cart">Esvaziar carrinho</button>
+          <div class="empty-btn-container"><button class="empty-cart">Esvaziar carrinho</button></div>
         </div>
+        
       </section>
     </section>
   </body>
