--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       <section class="cart">
         <ol class="cart__items"></ol>
         <button class="empty-cart">Esvaziar carrinho</button>
+        <p class="subTotal">SubTotal</p>
+        <p class="total-price"></p>
       </section>
     </section>
   </body>
