--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <section class="cart">
         <ol class="cart__items"></ol>
         <button class="empty-cart">Esvaziar carrinho</button>
+        <h2 class="total-price">R$0.00</h2>
       </section>
     </section>
   </body>
