--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       </div>
     </header>
     <section class="container">
-      <section class="items"></section>
+      <section class="items">
+        <p class="loading"></p>
+      </section>
+
       <section class="cart">
         <ol class="cart__items"></ol>
         <p class="total-price"></p>
