--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <ol class="cart__items"></ol>
         <button class="empty-cart">Esvaziar carrinho</button>
         <h2 class="total-price">R$0.00</h2>
+        <h3 class="loading"></h3>
       </section>
     </section>
   </body>
