--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <section class="items" id="item"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <div>
+          Total:<span class="total-price">00,00</span>
+        </div>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
