refatoração (reordenando e descrevendo funções) e brincando com css

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
         <span class="total-price"></span>
       </section>
     </section>
+    <footer>by @larissamf25 feat @trybe</footer>
   </body>
 </html>
