--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
       </div>
     </header>
     <section class="container">
+      <!-- <section class="loading"> Carregando... </section> -->
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
         <span class="total-price">0.00</span>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
+
     </section>
   </body>
 </html>
