Requisito 1 Completo pra entrega

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <section class="container">
-      <section class="items">/Pra Dentro\</section>
+      <section class="items">Lista:</section>
       <section class="cart">
         <ol class="cart__items"></ol>
         <button class="empty-cart">Esvaziar carrinho</button>
