--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <section class="container">
       <section class="items"></section>
       <section class="cart">
-        <ol class="cart__items"></ol>
+        <ol class="cart__items">
+          <h3 class="total-price"></h3>
+        </ol>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
