--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </header>
     <section class="container">
       <section class="items">
+        <div class="loading">
+          carregando...
+        </div>
       </section>
       <section class="cart">
         <ol class="cart__items"></ol>
