--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     <section class="container">
       <section class="items"></section>
       <section class="cart">
-        <ol class="cart__items">
-          <h3 class="total-price"></h3>
-        </ol>
+        <ol class="cart__items"></ol>
+        <h3 class="total-price"></h3>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
