--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <H3 class="total-price">0,00</H3>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
