--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <h2>Total</h2>
         <h3 class="total-price"></h3>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
