--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <section class="total-price-item">
+          <p>Total: R$
+            <span class="total-price">
+            </span>
+          </p>
+        </section>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
