--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items" id="list-cart"></ol>
-        <button class="empty-cart">Esvaziar carrinho</button>
+        <button class="empty-cart" id="button-empty">Esvaziar carrinho</button>
       </section>
     </section>
   </body>
