--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
       <section class="items">
       </section>
       <section class="cart">
+        
         <ol class="cart__items">
         </ol>
+        <hr>
+        <p class="total-price">
+           Valor Total:
+        </p>
+        </ol>  
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
