--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
-        <span class="total-price">0</span>
+        <div class="price-container">
+          <p>Preço total: <span class="total-price">0</span></p>
+        </div>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
