--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
-        <button class="empty-cart">Esvaziar carrinho</button>
+        <section class="cart-value">
+          <p>Valor Total:</p>
+          <h3 class="total-price" id="value">0</h3>
+        </section>
+        
+        <button class="empty-cart">Esvaziar carrinho</button>        
       </section>
     </section>
   </body>
