--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <p class="total">Total</p>
+        <p class="total-price"></p>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
