--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <div>
+          <p>Subtotal:</p>
+          <p class="total-price">R$ 0,00</p>
+        </div>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
