Requisito 10: Limpe o carrinho de compras - completo :tada:

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       <section class="cart">
         <ol class="cart__items"></ol>
         <div>
-          <p>Subtotal:</p>
-          <p class="total-price">R$ 0,00</p>
+          <p>Subtotal: R$ <span class="total-price"></span> </p>
         </div>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
