--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Shopping Cart</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,8 +30,8 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <p class="total-price"></p>
         <button class="empty-cart">Esvaziar carrinho</button>
-        <p span class="total-price"></span>
       </section>
     </section>
   </body>
