--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
-        <div>
+        <div class="subtotal">
           <p>Subtotal: R$ <span class="total-price"></span> </p>
         </div>
         <button class="empty-cart">Esvaziar carrinho</button>
