--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="header">
       <div class="container-title">
-        <span class="title"><strong>trybe</strong>shopping</span> 
+        <span class="title"><strong>trybe</strong>shopping</span>
       </div>
       <i class="material-icons" style="font-size:45px;color:white">shopping_cart</i>
       <div class="container-cartTitle">
@@ -30,6 +30,9 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <div class="price-container">
+          <p>Preço total: <span class="total-price">0</span></p>
+        </div>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
