10 feita, ainda não consegui fazer a 9

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="cart">
         <ol class="cart__items"></ol>
         <p class="total-price"></p>
-        <button class="empty-cart">Esvaziar carrinho</button>
+        <button class="empty-cart" onclick="bottoneEpty()">Esvaziar carrinho</button>
       </section>
     </section>
   </body>
