--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="cart">
         <ol class="cart__items"></ol>
         <div class="price-div">
-        <span>Total:</span>
+        <span>Total: $</span>
         <span class="total-price"></span>
       </div>
         <button class="empty-cart">Esvaziar carrinho</button>
