--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <span class="cart__title">Meu carrinho</span>
       </div>
     </header>
+    
     <section class="container">
       <section class="items"></section>
+      <section class="textLoading"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
         <button class="empty-cart">Esvaziar carrinho</button>
