--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       </section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <div>
+          <span>Total: $</span><span class="total-price"></span>
+        </div>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
