--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
+    <p class="total-price"></p>
   </body>
 </html>
