--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <i class="material-icons" style="font-size:45px;color:white">shopping_cart</i>
       <div class="container-cartTitle">
         <span class="cart__title">Meu carrinho</span>
+        <span>Total:R$<span class="total-price">0</span></span>
       </div>
     </header>
     <section class="container">
