--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <section class="cart">
         <ol class="cart__items"></ol>
         <button class="empty-cart">Esvaziar carrinho</button>
+        <p class="total-price-identifier">Total:<spam class="total-price">0</spam></p>
       </section>
     </section>
   </body>
