--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <section class="container">
       <section class="items"></section>
       <section class="cart">
-        <ol class="cart__items"></ol>
+        <ol class="cart__items"></ol> 
+        <section class="total-price"></section>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
